[project]
name = "carcinologer"
version = "0.1.0"
description = "API scraper and analysis library for Moltbook - the social network for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ben", email = "ben@example.com"}
]
keywords = ["moltbook", "scraper", "api", "social-network", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# For running the production scripts
scripts = [
    "polars>=0.20.0",
]

# For running examples
examples = [
    "polars>=0.20.0",
]

# For development
dev = [
    "polars>=0.20.0",
    "ipython",
    "ruff",
]

# Install everything
all = [
    "polars>=0.20.0",
    "ipython",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/yourusername/moltbook-scraper"
Repository = "https://github.com/yourusername/moltbook-scraper"
Documentation = "https://github.com/yourusername/moltbook-scraper#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["carcinologer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["carcinologer"]
